// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/admin_console/permission_schemes_settings/permission_description should allow select with link 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <PermissionDescription
    description="This is the description"
    id="defaultID"
    inherited={
      Object {
        "name": "all_users",
      }
    }
    selectRow={[MockFunction]}
  >
    <WithTooltip
      disabled={false}
      title={
        <span
          className="inherit-link-wrapper"
        >
          <Memo(MemoizedFormattedMessage)
            defaultMessage="Inherited from <link>{name}</link>."
            id="admin.permissions.inherited_from"
            values={
              Object {
                "link": [Function],
                "name": "All Members",
              }
            }
          />
        </span>
      }
    >
      <span
        className="permission-description"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseLeave={[Function]}
        onMouseMove={[Function]}
        onPointerDown={[Function]}
        onPointerEnter={[Function]}
      >
        <span
          className="inherit-link-wrapper"
        >
          <FormattedMessage
            defaultMessage="Inherited from <link>{name}</link>."
            id="admin.permissions.inherited_from"
            values={
              Object {
                "link": [Function],
                "name": "All Members",
              }
            }
          >
            <span>
              Inherited from 
              <a
                key=".$.1"
              >
                All Members
              </a>
              .
            </span>
          </FormattedMessage>
        </span>
      </span>
    </WithTooltip>
  </PermissionDescription>
</Provider>
`;

exports[`components/admin_console/permission_schemes_settings/permission_description should match snapshot if inherited 1`] = `
<ContextProvider
  value={
    Object {
      "store": Object {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      },
      "subscription": Subscription {
        "handleChangeWrapper": [Function],
        "listeners": Object {
          "notify": [Function],
        },
        "onStateChange": [Function],
        "parentSub": undefined,
        "store": Object {
          "clearActions": [Function],
          "dispatch": [Function],
          "getActions": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
        },
        "unsubscribe": null,
      },
    }
  }
>
  <PermissionDescription
    description="This is the description"
    id="defaultID"
    inherited={
      Object {
        "name": "all_users",
      }
    }
    selectRow={[MockFunction]}
  />
</ContextProvider>
`;

exports[`components/admin_console/permission_schemes_settings/permission_description should match snapshot with clickable link 1`] = `
<WithTooltip
  disabled={false}
  title={
    <span>
      This is a clickable description
    </span>
  }
>
  <span
    className="permission-description"
    onClick={[Function]}
  >
    <span>
      This is a clickable description
    </span>
  </span>
</WithTooltip>
`;

exports[`components/admin_console/permission_schemes_settings/permission_description should match snapshot with default Props 1`] = `
<WithTooltip
  disabled={false}
  title="This is the description"
>
  <span
    className="permission-description"
    onClick={[Function]}
  >
    This is the description
  </span>
</WithTooltip>
`;
